--- a/Milestone 2/chapter3.tex
+++ b/Milestone 2/chapter3.tex
@@ -1,6 +1,32 @@
 %DO NOT MESS AROUND WITH THE CODE ON THIS PAGE UNLESS YOU %REALLY KNOW WHAT YOU ARE DOING
-\chapter{Simulations} \label{Simulations}
-\section{ Stability Circle} \label{ Stability Circle} 
-\section{ Stability Curve} \label{ Stability Curve } 
+\chapter*{Simulations} 
+\addcontentsline{toc}{chapter}{Simulations}
 \section{ Stability Circuit} \label{ Stability Circuit } 
+\begin{figure}[H]
+\centering
+{\includegraphics[scale=0.5]{1.png}}
+\caption{ Stability Circuit }
+\end{figure}
+
+\section{ Response } \label{ Response } 
+\begin{figure}[H]
+\centering
+{\includegraphics[scale=0.5]{2.png}}
+\caption{ Response}
+\end{figure}
+
+\section{ Stability Circle} \label{ Stability Circle} 
+\begin{figure}[H]
+\centering
+{\includegraphics[scale=0.5]{4.png}}
+\caption{ Stability Circle }
+\end{figure}
+
+\section{ Stability Curve} \label{ Stability Curve } 
+\begin{figure}[H]
+\centering
+{\includegraphics[scale=0.5]{3.png}}
+\caption{ Stability Curve }
+\end{figure}
+
 
