--- a/Milestone 2/chapter2.tex
+++ b/Milestone 2/chapter2.tex
@@ -1,6 +1,6 @@
 %DO NOT MESS AROUND WITH THE CODE ON THIS PAGE UNLESS YOU %REALLY KNOW WHAT YOU ARE DOING
-\chapter{Theory and Calculations} \label{Theory and Calculations}
-
+\chapter*{Theory and Calculations} 
+\addcontentsline{toc}{chapter}{Theory and Calculations}
 \section{ Stability Network } \label{ Stability Network }
 \noindent The stability of the network depends on the source and load matching $\Gamma_{in}$ and $\Gamma_{out} $and the stability of the amplifier depends on source and load reflection coefficients i.e $\Gamma_{\textit{S}}$ and $\Gamma_{L}$ of the circuit. As per the design methodology we are using unconditional stability that is $|\Gamma_{S}| < 1$ and $|\Gamma_{L}| < 1$ for all passive source and load impedance. The following two tests are done to check the stability:
 
